--- a/mainapp/templates/index.html
+++ b/mainapp/templates/index.html
@@ -16,7 +16,14 @@
             }
         }
         </script>
-        
+    
+    <script>
+        function test(text) 
+        {
+            console.log(text);
+            
+        }
+    </script>
     
     <script type="module">
         // Loads 3d model into the scene
@@ -51,11 +58,11 @@
     <div class="container p-2 flex h-full mt-2">
         
         <!-- Left Sidebar -->
-        <div class="w-1/4 bg-white p-4 shadow">
+        <div id="left-bar" class="w-1/4 bg-white p-4 shadow">
             <!-- Place all your left sidebar components here -->
-            <button class="mb-4 bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">
+            <!-- <button class="mb-4 bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">
                 Button
-            </button>
+            </button> -->
             
             <!-- Other components from the 3D Slicer UI... -->
         </div>
@@ -93,7 +100,7 @@
                 
             </div>
         </div>
-    </div>
+    </div> -->
 </body>
 
 </html>
