--- a/mainapp/templates/index.html
+++ b/mainapp/templates/index.html
@@ -71,7 +71,7 @@
                     </div>
               
                
-                    <div id="threejs-container" class="bg-gray-300 relative w-full pb-full">
+                    <div id="threejs-container" class="bg-gray-300 relative w-full pb-full" style="background: linear-gradient(to bottom, #7478be 0%, #c1c3e8 100%);">
                         <!-- Content for this grid item. E.g., Three.js rendering -->
                         
                     </div>
