--- a/mainapp/templates/index.html
+++ b/mainapp/templates/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.min.js" defer></script>
 
-    <title>Message Display</title>
+    <title>Ampere Neuro</title>
 
     <script type="importmap">
         {
@@ -48,7 +48,7 @@
                         <div class="border-t"></div>
                         <a href="#" id="uploadMriButton" class="block px-4 py-2 text-sm leading-5 text-gray-700 hover:bg-gray-100 focus:outline-none focus:bg-gray-100 flex items-center space-x-2">
                             <i class="fas fa-upload"></i>
-                            <span>Upload STL</span>
+                            <span>Upload NIFTI</span>
                         </a>
                     </div>
                 </div>
