--- a/mainapp/templates/index.html
+++ b/mainapp/templates/index.html
@@ -26,7 +26,7 @@
 <body class="bg-gray-100 h-screen">
     <input type="file" id="hiddenMriInput" accept=".nii.gz, .nii" style="display: none;">
 
-    <div class="bg-white shadow p-4">
+    <div class="bg-white shadow p-4" style="height: 8%;">
         <nav class="container mx-auto flex justify-between">
             <div x-data="{ open: false }" class="relative">
                 <button @click="open = !open" class="flex items-center space-x-2" id="navBarButton">
@@ -62,7 +62,7 @@
             </a>
         </nav>
     </div>
-    <div class="container p-2 flex h-full mt-2">
+    <div class="container p-2 flex mt-2" style="height: 90%;">
         
         <!-- Left Sidebar -->
         <div id="left-bar" class="w-1/4 bg-white p-4 shadow overflow-auto">
@@ -73,35 +73,47 @@
         
         <!-- Right Main Area -->
         <div class="w-3/4">
-            <div class="grid grid-cols-2 gap-4 h-full">
+            <div class="grid grid-cols-2 gap-2 h-full">
                 
-                    <div class="relative w-full pb-full" >
+                    <div class="w-full" >
                         <!-- Content for this grid item. E.g., Three.js rendering -->
-                        <div style="background-color: red; height: 10%; display: flex; justify-content: start; align-items: center; ">
-                            <span class="text-center text-white text-sm" style="width : 15%">View 1</span>
+                        <div style="background-color: #eb4933; height: 10%; display: flex; justify-content: start; align-items: center; ">
+                            <span class="text-center text-white text-sm" style="width : 15%">Axial</span>
                             <input type="range" id="nifti-slider-1" style="width : 75%"></input>
                             <span id="nifti-value-1" class="text-center text-white text-sm" style="width : 10%">50</span>
                         </div>
-
-                        <div id="nifti-container-1" class="bg-black" style="background-color: black; height: 90%;"></div>
+                        <div id="nifti-container-1" class="bg-black" style="background-color: black; height: 90%;">
+                        </div>
                     </div>
               
                
-                    <div id="threejs-container" class="relative w-full pb-full" style="background: linear-gradient(to bottom, #7478be 0%, #c1c3e8 100%);">
+                    <div id="threejs-container" class="w-full" style="background: linear-gradient(to bottom, #7478be 0%, #c1c3e8 100%);">
                         <!-- Content for this grid item. E.g., Three.js rendering -->
                         
                     </div>
               
               
-                    <div id="nifti-container-2" class="bg-black relative w-full pb-full">
+                    <div class="w-full">
                         <!-- Content for this grid item. E.g., Three.js rendering -->
-
+                        <div style="background-color: #74b74f; height: 10%; display: flex; justify-content: start; align-items: center; ">
+                            <span class="text-center text-white text-sm" style="width : 15%">Coronal</span>
+                            <input type="range" id="nifti-slider-2" style="width : 75%"></input>
+                            <span id="nifti-value-2" class="text-center text-white text-sm" style="width : 10%">50</span>
+                        </div>
+                    
+                        <div id="nifti-container-2" class="bg-black" style="background-color: black; height: 90%;"></div>
                     </div>
                
            
-                    <div id="nifti-container-3" class="bg-black relative w-full pb-full">
+                    <div class="w-full">
                         <!-- Content for this grid item. E.g., Three.js rendering -->
-
+                        <div style="background-color: #f1d84d; height: 10%; display: flex; justify-content: start; align-items: center; ">
+                            <span class="text-center text-white text-sm" style="width : 15%">Sagittal</span>
+                            <input type="range" id="nifti-slider-3" style="width : 75%"></input>
+                            <span id="nifti-value-3" class="text-center text-white text-sm" style="width : 10%">50</span>
+                        </div>
+                    
+                        <div id="nifti-container-3" class="bg-black" style="background-color: black; height: 90%;"></div>
                     </div>
                 
             </div>
