--- a/mainapp/templates/index.html
+++ b/mainapp/templates/index.html
@@ -127,15 +127,15 @@
         document.getElementById('uploadMriButton').addEventListener('click', triggerFileSelect)
         document.getElementById('segmentMri').addEventListener('click', triggerSegmentMri)
         document.getElementById('run3dSlicer').addEventListener('click', trigger3dSlicer)
-        document.getElementById('initRobot').addEventListener('click', load3dModel)
+        document.getElementById('initRobot').addEventListener('click', startRobot)
 
         function triggerFileSelect(){
             document.getElementById('hiddenMriInput').click();
         }
 
-        async function initialize2dNIFTI(path) {
+        async function initialize2dNIFTI(path, segmented=false) {
                 const module = await import('{% static "js/nifti_loader.js" %}');
-                module.loadNIFTI2D(path);
+                module.loadNIFTI2D(path, segmented);
         }
         
         function getModels(){
@@ -189,6 +189,7 @@
             }).then(response => {
                 if(response.ok){
                     console.log('File segmented successfully')
+                    initialize2d(selectedModel, true);
                 }else{
                     console.log('Error segmenting file')
                 }
@@ -213,6 +214,7 @@
             }).then(response => {
                 if(response.ok){
                     console.log('3D Slicer ran successfully')
+                    load3dModel();
                 }else{
                     console.log('Error running 3D Slicer')
                 }
@@ -228,7 +230,7 @@
             }
         })
 
-        async function initialize2d(niftiFile) {
+        function initialize2d(niftiFile, segmented = false) {
             fetch('/getNifti/', {
                 method: 'POST',
                 body: JSON.stringify({
@@ -241,7 +243,7 @@
                 if(response.ok){
                  response.json().then(async data => {
                     // console.log(data)
-                    initialize2dNIFTI(data['file']);
+                    initialize2dNIFTI(data['file'], segmented);
                  })
                 }else{
                     alert('Error fetching file')
@@ -278,7 +280,12 @@
             //change the inner html of the button to the selected model and a checkmark
             navBarButton.innerHTML = `<i class="fas fa-check"></i> <span>${model_name}</span>`;
             console.log(model_name)
-            initialize2d(model_name)
+            initialize2d(model_name, false)
+        }
+
+        function startRobot()
+        {
+            console.log("Starting Robot")
         }
 
          function load3dModel(){
