--- a/mainapp/templates/index.html
+++ b/mainapp/templates/index.html
@@ -85,8 +85,8 @@
                         <!-- Content for this grid item. E.g., Three.js rendering -->
                         <div style="background-color: #eb4933; height: 10%; display: flex; justify-content: start; align-items: center; ">
                             <span class="text-center text-white text-sm" style="width : 15%">Axial</span>
-                            <input type="range" id="nifti-slider-0" style="width : 75%"></input>
-                            <span id="nifti-value-0" class="text-center text-white text-sm" style="width : 10%">50</span>
+                            <input type="range" id="nifti-slider-0" style="width : 70%"></input>
+                            <span id="nifti-value-0" class="text-center text-white text-sm" style="width : 15%">50 mm</span>
                         </div>
                         <div id="nifti-container-0" class="bg-black" style="background-color: black; height: 90%;">
                         </div>
@@ -103,8 +103,8 @@
                         <!-- Content for this grid item. E.g., Three.js rendering -->
                         <div style="background-color: #74b74f; height: 10%; display: flex; justify-content: start; align-items: center; ">
                             <span class="text-center text-white text-sm" style="width : 15%">Coronal</span>
-                            <input type="range" id="nifti-slider-1" style="width : 75%"></input>
-                            <span id="nifti-value-1" class="text-center text-white text-sm" style="width : 10%">50</span>
+                            <input type="range" id="nifti-slider-1" style="width : 70%"></input>
+                            <span id="nifti-value-1" class="text-center text-white text-sm" style="width : 15%">50 mm</span>
                         </div>
                     
                         <div id="nifti-container-1" class="bg-black" style="background-color: black; height: 90%;"></div>
@@ -115,8 +115,8 @@
                         <!-- Content for this grid item. E.g., Three.js rendering -->
                         <div style="background-color: #f1d84d; height: 10%; display: flex; justify-content: start; align-items: center; ">
                             <span class="text-center text-white text-sm" style="width : 15%">Sagittal</span>
-                            <input type="range" id="nifti-slider-2" style="width : 75%"></input>
-                            <span id="nifti-value-2" class="text-center text-white text-sm" style="width : 10%">50</span>
+                            <input type="range" id="nifti-slider-2" style="width : 70%"></input>
+                            <span id="nifti-value-2" class="text-center text-white text-sm" style="width : 15%">50 mm</span>
                         </div>
                     
                         <div id="nifti-container-2" class="bg-black" style="background-color: black; height: 90%;"></div>
