--- a/mainapp/templates/index.html
+++ b/mainapp/templates/index.html
@@ -72,20 +72,19 @@
         <!-- Left Sidebar -->
         <div class="w-1/4 bg-white shadow">
             <!-- Place all your left sidebar components here -->
-            <div class="mx-auto h-full space-y-2 py-2" style="width: 96%;">
+            <div class="mx-auto h-full space-y-4 py-2" style="width: 96%;">
                 <a class="px-2">
                     <i class="fas fa-puzzle-piece"></i>
                     <span>Segmentations</span>
                 </a>
-                <div id="left-bar" class="h-3/4 p-4 bg-gray-50 overflow-auto"></div>
-                <div class="py-10">
-                    <button id="btn-entry" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">
-                    Set Entry Point
-                    </button>
-                    <button id="btn-dest" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">
-                    Set Dest Point
-                    </button>
-                </div>
+                <div id="left-bar" class="h-3/4 p-4 bg-gray-100 overflow-auto"></div>
+                <button id="btn-entry" class="w-full bg-blue-500 hover:bg-blue-700 text-white py-2 rounded">
+                        Set Entry Point
+                </button>
+                <br>
+                <button id="btn-dest" class="w-full bg-blue-500 hover:bg-blue-700 text-white py-2 rounded">
+                        Set Dest Point
+                </button>
             </div>
             <!-- Other components from the 3D Slicer UI... -->
         </div>
