Improved line visualization

--- a/mainapp/templates/index.html
+++ b/mainapp/templates/index.html
@@ -14,7 +14,10 @@
                 "three": "https://unpkg.com/three@0.157.0/build/three.module.js",
                 "stl-loader": "https://unpkg.com/three@0.157.0/examples/jsm/loaders/STLLoader.js",
                 "orbit-control": "https://unpkg.com/three@0.157.0/examples/jsm/controls/OrbitControls.js",
-                "volume-shader": "https://unpkg.com/three@0.157.0/examples/jsm/shaders/VolumeShader.js"      
+                "line-material": "https://unpkg.com/three@0.157.0/examples/jsm/lines/LineMaterial.js",
+                "line-geometry": "https://unpkg.com/three@0.157.0/examples/jsm/lines/LineGeometry.js",
+                "line2": "https://unpkg.com/three@0.157.0/examples/jsm/lines/Line2.js",
+                "volume-shader": "https://unpkg.com/three@0.157.0/examples/jsm/shaders/VolumeShader.js"
             }
         }
         </script>
@@ -82,8 +85,8 @@
                         Set Entry Point
                 </button>
                 <br>
-                <button id="btn-dest" class="w-full bg-blue-500 hover:bg-blue-700 text-white py-2 rounded">
-                        Set Dest Point
+                <button id="btn-target" class="w-full bg-blue-500 hover:bg-blue-700 text-white py-2 rounded">
+                        Set Target Point
                 </button>
             </div>
             <!-- Other components from the 3D Slicer UI... -->
