--- a/mainapp/templates/index.html
+++ b/mainapp/templates/index.html
@@ -11,13 +11,13 @@
     <script type="importmap">
         {
             "imports": {
-                "three": "https://unpkg.com/three@0.157.0/build/three.module.js",
-                "stl-loader": "https://unpkg.com/three@0.157.0/examples/jsm/loaders/STLLoader.js",
-                "orbit-control": "https://unpkg.com/three@0.157.0/examples/jsm/controls/OrbitControls.js",
-                "line-material": "https://unpkg.com/three@0.157.0/examples/jsm/lines/LineMaterial.js",
-                "line-geometry": "https://unpkg.com/three@0.157.0/examples/jsm/lines/LineGeometry.js",
-                "line2": "https://unpkg.com/three@0.157.0/examples/jsm/lines/Line2.js",
-                "volume-shader": "https://unpkg.com/three@0.157.0/examples/jsm/shaders/VolumeShader.js"
+                "three": "https://unpkg.com/three@0.158.0/build/three.module.js",
+                "stl-loader": "https://unpkg.com/three@0.158.0/examples/jsm/loaders/STLLoader.js",
+                "orbit-control": "https://unpkg.com/three@0.158.0/examples/jsm/controls/OrbitControls.js",
+                "line-material": "https://unpkg.com/three@0.158.0/examples/jsm/lines/LineMaterial.js",
+                "line-geometry": "https://unpkg.com/three@0.158.0/examples/jsm/lines/LineGeometry.js",
+                "line2": "https://unpkg.com/three@0.158.0/examples/jsm/lines/Line2.js",
+                "lru-cache": "https://unpkg.com/lru-cache@10.0.1/dist/mjs/index.min.js"
             }
         }
         </script>
