Move js libraries to local

--- a/mainapp/templates/index.html
+++ b/mainapp/templates/index.html
@@ -11,18 +11,16 @@
     <script type="importmap">
         {
             "imports": {
-                "three": "https://unpkg.com/three@0.158.0/build/three.module.js",
-                "stl-loader": "https://unpkg.com/three@0.158.0/examples/jsm/loaders/STLLoader.js",
-                "orbit-control": "https://unpkg.com/three@0.158.0/examples/jsm/controls/OrbitControls.js",
-                "line-material": "https://unpkg.com/three@0.158.0/examples/jsm/lines/LineMaterial.js",
-                "line-geometry": "https://unpkg.com/three@0.158.0/examples/jsm/lines/LineGeometry.js",
-                "line2": "https://unpkg.com/three@0.158.0/examples/jsm/lines/Line2.js",
-                "lru-cache": "https://unpkg.com/lru-cache@10.0.1/dist/mjs/index.min.js"
+                "three": "{% static "js/library/three.module.js" %}",
+                "stl-loader": "{% static "js/library/STLLoader.js" %}",
+                "orbit-control": "{% static "js/library/OrbitControls.js" %}",
+                "line-material": "{% static "js/library/LineMaterial.js" %}",
+                "line-geometry": "{% static "js/library/LineGeometry.js" %}",
+                "line2": "{% static "js/library/Line2.js" %}",
+                "lru-cache": "{% static "js/library/LRUCache.js" %}"
             }
         }
         </script>
-        <script type="module">
-        import * as THREE from 'three';
         </script>
     
    
