--- a/mainapp/templates/index.html
+++ b/mainapp/templates/index.html
@@ -80,13 +80,22 @@
                     <span>Segmentations</span>
                 </a>
                 <div id="left-bar" class="h-3/4 p-4 bg-gray-100 overflow-auto"></div>
-                <button id="btn-entry" class="w-full bg-blue-500 hover:bg-blue-700 text-white py-2 rounded">
-                        Set Entry Point
-                </button>
-                <br>
-                <button id="btn-target" class="w-full bg-blue-500 hover:bg-blue-700 text-white py-2 rounded">
-                        Set Target Point
-                </button>
+                <div id="functions" class="text-center">
+                    <button id="btn-entry" class="w-5/12 bg-gray-500 text-white py-2 rounded" disabled>
+                            Set Entry Point
+                    </button>
+                    <button id="btn-target" class="w-5/12 bg-gray-500 text-white py-2 rounded" disabled>
+                            Set Target Point
+                    </button>
+                    <br>
+                    <br>
+                    <button id="btn-measure" class="w-5/12 bg-gray-500 text-white py-2 rounded" disabled>
+                            Start Measuring
+                    </button>
+                    <button id="btn-record" class="w-5/12 bg-gray-500 text-white py-2 rounded" disabled>
+                            Start Recording
+                    </button>
+                </div>
             </div>
             <!-- Other components from the 3D Slicer UI... -->
         </div>
