UI & Vis Updates

--- a/mainapp/templates/index.html
+++ b/mainapp/templates/index.html
@@ -89,12 +89,20 @@
                     </button>
                     <br>
                     <br>
-                    <button id="btn-measure" class="w-5/12 bg-gray-500 text-white py-2 rounded" disabled>
-                            Start Measuring
-                    </button>
                     <button id="btn-record" class="w-5/12 bg-gray-500 text-white py-2 rounded" disabled>
                             Start Recording
                     </button>
+                    <button id="btn-record-display" class="w-5/12 bg-gray-500 text-white py-2 rounded" disabled>
+                            Display Recording
+                    </button>
+                    <br>
+                    <br>
+                    <button id="btn-measure" class="w-5/12 bg-gray-500 text-white py-2 rounded" disabled>
+                            Start Measuring
+                    </button>
+                    <a class="text-sm">
+                            Measuring Result: <span id="measure-result">0</span> mm
+                    </a>
                 </div>
             </div>
             <!-- Other components from the 3D Slicer UI... -->
