--- a/mainapp/templates/index.html
+++ b/mainapp/templates/index.html
@@ -381,7 +381,7 @@
             var visibilities = JSON.parse(localStorage.getItem('visibilities'));
             //find the index of all the true values
             var true_indices = [];
-            console.log(visibilities);
+            // console.log(visibilities);
             for (var i = 0; i < visibilities.length; i++) {
                 if (visibilities[i] == true) {
                     true_indices.push(i);
